Fix(FileItem): fix layout bug when filename is too long

--- a/app/components/ConventionCommit/FileItem.css
+++ b/app/components/ConventionCommit/FileItem.css
@@ -4,10 +4,15 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  height: 24px;
 }
 
 .file-item__actions {
-  visibility: hidden;
+  display: none;
+  align-items: center;
+  min-width: 0;
 }
 
 .file-item:hover {
@@ -15,7 +20,7 @@
 }
 
 .file-item:hover .file-item__actions {
-  visibility: visible;
+  display: flex;
 }
 
 .file-item__status {
@@ -33,4 +38,11 @@
 
 .file-item__status--M {
   color: var(--vscode-gitDecoration-modifiedResourceForeground)
+}
+
+.file-item__title {
+  min-width: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  flex: 1;
 }
